# JouTakWeb

./: .dockerignore  .env.example  .env.production  .flake8  .gitignore  AGENTS.md  CONTRIBUTING.md  Python.gitignore  README.md  compose.yaml  docker-compose.images.yml  docker-compose.local.yml  docker-compose.yml  local-proxy.nginx.conf  pyproject.toml  stack.yml
.github/workflows/: CI.yml  lint.yml  release.yml
.husky/: commit-msg  pre-commit
backend/: AGENTS.md  Dockerfile  docker-entrypoint.sh  manage.py
backend/accounts/: adapters.py  admin.py  apps.py  mfa_adapter.py  signals.py  token_strategy.py
backend/accounts/api/: errors.py  exception_handlers.py  openapi_params.py  query_params.py  router.py  router_auth.py  router_headless.py  router_oauth.py
backend/accounts/services/: account_status.py  auth.py  auth_cookies.py  email_addresses.py  emailing.py  headless.py  oauth.py  personalization.py  profile.py  sessions.py
backend/accounts/tests/: base.py  test_account_api.py  test_adapters.py  test_auth_api.py  test_exception_handlers.py  test_mfa_api.py  test_oauth_service.py  test_services.py  test_status_oauth_api.py
backend/accounts/transport/: schemas.py
backend/backend/: admin.py  admin_site.py  middleware.py  ratelimiting.py  settings.py  urls.py  views.py
backend/backend/settings/: base.py  dev.py  env.py  prod.py
backend/backend/tests/: test_admin_host_policy.py  test_email_deploy.py  test_health.py  test_maintenance_command.py  test_management_commands.py  test_prod_settings.py  test_ratelimiting.py  test_settings_env.py  test_smoke_infra.py
backend/bff/: apps.py  services.py  urls.py  views.py
backend/bff/tests/: test_views.py
backend/core/: admin.py  apps.py  models.py  test.py
backend/core/migrations/: 0001_initial.py  (+5 more)
backend/featureflags/: admin.py  apps.py  hooks.py  models.py  provider.py  registry.py  services.py
backend/observability/: __init__.py  apps.py  logging.py  setup.py
backend/requirements/: dev.txt  prod.txt  test.txt
docs/: api-conventions.md  architecture.md  frontend-conventions.md  security.md
frontend/: .dockerignore  .gitignore  .lintstagedrc.json  .stylelintrc.json  AGENTS.md  Dockerfile  entrypoint.sh  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  prepare-husky.mjs  vite.config.js
frontend/error403-testTask/: 403-script.js  403-styles.css  403.html  error403-script.js  error403-styles.css  error403.html
frontend/src/: App.jsx  main.jsx
scripts/: check_deploy_gate.sh  check_frontend_openapi_contracts.py  commitlint.mjs  smoke_stack.py
(+167 files in other folders)
